--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body> 
         <table cellspacing="20">
             <tr>
-                <td><img src="https://scontent.fabb1-1.fna.fbcdn.net/v/t39.30808-6/321632991_703061377994028_3725933518478145044_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGSBnh3zbp7Az7LfmZObdIDqDPuYddd9lSoM-5h1132VKr2dg2-3ZSSVFEgLiKQtOYNrLwDKDHaqhcDnvMOxWAm&_nc_ohc=7BU9idjKqZUAX-Lsugh&_nc_zt=23&_nc_ht=scontent.fabb1-1.fna&oh=00_AfBnIYQm6w7Vz_U3fxbo8OZWVSeE614DZsY0BkNxp-KKwQ&oe=63B4FEB3"></td>
+                <td><img src="https://scontent.fabv2-1.fna.fbcdn.net/v/t39.30808-6/320561230_6229587327054328_397855358392407472_n.jpg?stp=cp6_dst-jpg_p960x960&_nc_cat=101&ccb=1-7&_nc_sid=e3f864&_nc_eui2=AeEdbX1cv_UiOF1d-17fqcvdCAtoXO4YONsIC2hc7hg42yH-TyLKlczY-cr8YCX8G1Ov9c3GveTE-0h3VYw_z5sg&_nc_ohc=6E8TJEGomvIAX834_Fg&_nc_zt=23&_nc_ht=scontent.fabv2-1.fna&oh=00_AfBG7I78iYIbPiygwns1kHl5J9OF0AaJmrY7Pdz_GUUwJg&oe=63BEE343" alt="Samzy's profile picture" width="220pt" height="240pt"></td>
                 <td> <h1>Alvin Samzy</h1>
                 <p><em>Founder of<strong><a href="https://appbrewery.com/">The App Brewery</a></strong>.</em></p>
                 <p>I am a professor in the Federal University of technology owerri under the faculty of programing</p>
